--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-p{
-    color:black;
+@theme {
+  /* This tells Tailwind to use the 'dark' class on the html element */
+  --dark-mode: class; 
 }
+@custom-variant dark (&:where(.dark, .dark *));
 .input {
     @apply w-full bg-white/5 border border-white/20 rounded-lg px-4 py-2 text-white
     focus:outline-none focus:ring-2 focus:ring-yellow-400;
